--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon_1.png",
     "splash": {
       "image": "./assets/splash_1.png",
       "resizeMode": "contain",
